# ShortBot

./: .env.example  .gitignore  LICENSE  README.md  go.mod  main.go  main.py  pyproject.toml
birthdays/: birthday.go  checkbirthdays.go  loadbirthdays.go
commands/: command.go  quoteoftheday.go  registercommands.go  sendsup.go
commands/actions/: actionhelpers.go  actionutils.go  getbirthdays.go  isbrocooked.go  onevsone.go  quoteoftheday.go  randomuser.go  setbirthday.go  sixseveninfo.go  tung.go
eventhandlers/: commandmanager.go  messagecreate.go  responsemanager.go
handlers/: sendsup.go
responses/: replacesean.go  responseutils.go  sayshaun.go  sendsup.go  sixseven.go  sixsevenevent.go
utils/: globalutils.go  utils.go
