[build-system]
requires = ["setuptools>=65.5.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "shortbot"
version = "0.1.0"
description = "The official bot of the Short Gang"
authors = [
    { name = "Short Gang" }
]
license = "MIT"
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "discord.py>=2.5.2",               
    "python-dotenv>=1.0.0"
]

